# shisad

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  live-behavior.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml  publish.yml
contrib/ledger-bridge/: README.md  package-lock.json  package.json  tsconfig.json
contrib/ledger-bridge/src/: auth.ts  crypto-utils.ts  device.ts  extract-key.ts  format.ts  linux-hid-filter.ts  server.ts
contrib/ledger-bridge/tests/: auth.test.ts  device.test.ts  format.test.ts
docs/: 2FA.md  AUDIT-supply-chain.md  DEPLOY.md  DESIGN-PHILOSOPHY.md  ENV-VARS.md  PUBLISH.md  ROADMAP.md  SECURITY.md  TOOL-STATUS.md  USE-CASES.md  coverage-baseline.json
docs/adr/: ADR-coding-agent-transport.md  ADR-command-task-architecture.md  ADR-policy-source-authority.md  DESIGN-attachment-ingest.md  DESIGN-evidence-refs.md
docs/analysis/: ANALYSIS-security-casestudies.md  ANALYSIS-supply-chain.md  ANALYSIS-test-suite-optimization.md  openclaw-awesome-but-dontinstall.md
docs/runbooks/: README.md  incident-response.md  key-rotation.md  rollback.md  skill-revocation.md
runner/: .env.example  README.md  RUNBOOK.md  SKILL.md  daemon_entrypoint.sh  harness.sh  policy.default.yaml  test_parse_env.sh
scripts/: conformance_harness.py  coverage_baseline.py  coverage_module_gate.py  coverage_trend.py  daily_driver_evidence.py  demo_credential_isolation.py  demo_v0_5_e2e.sh  live_tool_matrix.py  m6_adversarial_gate.py  m6_adversarial_metrics.py  mock_signer_service.py  promptguard_artifacts.py  release_stats_rollup.py  security_assets.py  test_daemon_site_guard.py  test_function_audit.py  yara_parity_report.py
src/shisad/: __init__.py
src/shisad/approver/: __init__.py  main.py
src/shisad/assistant/: __init__.py  boundary_helpers.py  (+4 more)
tests/: conftest.py
tests/adversarial/: metrics_baseline.json  test_a2a_ingress.py  test_adversarial_channels.py  test_adversarial_cleanroom.py  test_adversarial_context_taint.py  test_adversarial_control_plane.py  test_adversarial_defense.py  test_adversarial_firewall.py  test_adversarial_hardening.py  test_adversarial_sandbox.py  test_adversarial_skills.py  test_adversarial_task_handoffs.py  test_attachment_ingest.py  test_content_tool_injection.py  test_evidence_refs.py  test_local_fido2_approval.py  test_m2_adversarial.py  test_m3_adversarial.py  test_m4_adversarial.py  test_m6_adversarial.py  test_native_tool_spoofing.py  test_pairing_artifact_parser.py  test_signer_approval.py  test_totp_approval.py  test_webauthn_approval.py
tests/behavioral/: _prefill.py  conftest.py  test_behavioral_contract.py  test_behavioral_contract_live_model.py  test_command_chat_pending_actions.py  test_evidence_behavioral.py  test_first_principles_gates.py  test_live_user_smoke_followups.py  test_lockdown_resume.py  test_memory_scoping.py  test_no_model_configured_behavioral.py  test_prefill_smoke.py  test_tool_access_ux.py  test_v04_behavioral_extensions.py
tests/fixtures/: conformance_cases.json  daemon_site_baseline.json  fake_acp_agent.py  fake_playwright_cli.py  m2_obfuscation_corpus.json  m2_url_adversarial_matrix.json
tests/helpers/: approval.py  artifact_kms.py  behavioral.py  daemon.py  mcp.py  signer.py  webauthn.py
tests/integration/: test_a2a_ingress.py  test_admin_selfmod.py  test_channel_pump.py  test_chat_confirmation_e2e.py  test_cleanroom_nonadmin.py  test_cleanroom_workflow.py  test_coding_agent_tasks.py  test_context_scaffold_degraded.py  test_control_plane_integration.py  test_daemon_reset.py  test_daemon_runtime.py  test_dev_commands.py  test_handler_integration.py  test_m0_runtime_completion.py  test_m2_security_loop.py  test_m3_sandbox_loop.py  test_m3_scope_enforcement.py  test_m4_skill_runtime_and_governance.py  test_m5_control_plane_integration.py  test_m6_security_hardening.py  test_runtime_completion.py  test_sandbox_loop.py  test_scheduler_execution_gate.py  test_security_hardening_integration.py  test_security_loop_core.py  test_security_loop_defense.py  test_session_archive_workflows.py  test_session_replay.py  test_signer_control.py  test_skill_runtime_governance.py  test_task_ledger_scaffold.py  test_task_session_isolation.py  test_two_factor_control.py
tests/live/: test_coding_agents_live.py
tests/unit/: test_a2a_interop.py  test_a2a_ratelimit.py  test_acp_adapter.py  test_action_monitor_llm.py  test_adversarial_metrics.py  test_api_schema.py  test_approval_protocol.py  test_approver_main.py  test_assistant_primitives.py  test_attachment_ingest.py  test_audit.py  test_audit_query.py  test_boundary_helpers.py  test_browser.py  test_browser_toolkit.py  test_channels.py  test_chat_confirmation.py  test_chat_tui.py  test_checkpoint.py  test_cli_main.py  test_cli_provider_doctor.py  test_cli_rpc.py  test_coding_agent_manager.py  test_coding_agent_registry.py  test_confirmation.py  test_conformance_harness.py  test_connect_path.py  test_context_scaffold.py  test_control_plane.py  test_control_plane_audit.py  test_control_plane_differential.py  test_control_plane_sidecar.py  test_conversation_context.py  test_credentials.py  test_csv_export.py  test_daemon_services.py  test_daily_driver_evidence.py  test_dashboard.py  test_denied_action_observation.py  test_devloop_readiness.py  (+144 more)
(+221 files in other folders)
