[project]
name = "shisad"
version = "0.1.0"
description = "Security-first AI agent daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "click>=8.1,<9",
    "pyyaml>=6.0,<7",
]

[project.scripts]
shisad = "shisad.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shisad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "types-pyyaml>=6.0.12.20250915",
]
security-runtime = [
    "cryptography>=44.0,<46",
    "yara-python>=4.5,<5",
]
coverage = [
    "pytest-cov>=5.0,<7",
]
channels-runtime = [
    "matrix-nio[e2e]>=0.25,<0.26",
]
