[project]
name = "shisad"
version = "0.6.2"
description = "Security-first AI agent daemon"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "agent-client-protocol==0.8.1",
    "click>=8.1,<9",
    "pyyaml>=6.0,<7",
    "cryptography>=46.0.6,<47",
    "fido2>=2.1,<3",
    "loguru>=0.7,<1",
    "qrcode>=8.2,<9",
]

[project.urls]
Homepage = "https://github.com/shisa-ai/shisad"
Repository = "https://github.com/shisa-ai/shisad"
Issues = "https://github.com/shisa-ai/shisad/issues"
Changelog = "https://github.com/shisa-ai/shisad/blob/main/CHANGELOG.md"

[project.scripts]
shisad = "shisad.cli.main:cli"
shisactl = "shisad.cli.main:cli"
shisad-approver = "shisad.approver.main:cli"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shisad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_cap_net_admin: tests that require CAP_NET_ADMIN capability",
    "live_smoke: minimal high-signal live-model behavioral coverage",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "numpy>=2.3,<3",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "types-pyyaml>=6.0.12.20250915",
    "textual>=0.89,<1",
]
security-runtime = [
    "yara-python>=4.5,<5",
    "transformers>=4.53,<5",
    "onnxruntime>=1.18,<2",
    "safetensors>=0.5,<1",
    "sentencepiece>=0.2,<1",
]
security-build = [
    "transformers>=4.53,<5",
    "torch>=2.7,<3",
    "onnx>=1.16,<2",
    "onnxscript>=0.1,<1",
    "onnxruntime>=1.18,<2",
    "huggingface-hub>=0.36,<1",
    "safetensors>=0.5,<1",
    "sentencepiece>=0.2,<1",
]
coverage = [
    "pytest-cov>=5.0,<7",
]
channels-runtime = [
    "matrix-nio[e2e]>=0.25,<0.26",
    "discord.py>=2.4,<3",
    "python-telegram-bot>=21.6,<22",
    "slack-bolt>=1.21,<2",
    "slack-sdk>=3.33,<4",
]
